Updated Hive and Hadoop notes